# Rahoot

./: .env.example  Cargo.toml  Dockerfile  LOCAL.md  QUIZ_JSON_FORMAT.md  README.md  compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: build-deliver.yml  ci.yml  release-artifacts.yml
config/: game.json
config/quizz/: Revolution_Industrielle.json  Systeme_Solaire.json  space.json
src/: config.rs  game.rs  main.rs  types.rs
static/: app.js  style.css
templates/: base.html  game.html  index.html  manager.html
