[package]
name = "quizrush"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
askama = "0.15"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["fs", "cors"] }
uuid = { version = "1", features = ["v4"] }
rand = "0.9"
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
dashmap = "6"
